InputSimulatorの追加とリアクタの改善
Program.csでInputSimulatorを追加し、FirstTimeOnlyReactorとSingleTouchReactorのイベントハンドラを設定。TouchSenderReceiverに新しいAddReactorメソッドを導入。

TouchSenderTablet.CUI.csprojにInputSimulatorPlusを追加し、Voltaney.TouchSenderInterpreterのバージョンを更新。

TouchSenderReceiverExtensions.csでFirstTimeOnlyReactorのイベントハンドラの追加方法を変更し、ITouchSenderReactorインターフェースを使用。

FirstTimeOnlyReactor.csとITouchSenderReactor.csでOnReceiveメソッドをReceiveメソッドに名前変更し、一貫性を向上。

TouchSenderReceiver.csでリアクタのReceiveメソッドを呼び出すように変更し、処理を統一。

SingleTouchEventArgs.csを追加し、タッチイベントの前後の状態を管理するプロパティを定義。

SingleTouchReactor.csを追加し、タッチイベントの処理を行うクラスを実装。

--- a/TouchSenderTablet.CUI/TouchSenderTablet.CUI.csproj
+++ b/TouchSenderTablet.CUI/TouchSenderTablet.CUI.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="InputSimulatorPlus" Version="1.0.7" NoWarn="NU1701" />
   </ItemGroup>
 
   <ItemGroup>
