--- a/TouchSenderTablet.CUI/TouchSenderTablet.CUI.csproj
+++ b/TouchSenderTablet.CUI/TouchSenderTablet.CUI.csproj
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TouchSenderTablet.Core\TouchSenderTablet.Core.csproj" />
+    <ProjectReference Include="..\TouchSenderReceiver\TouchSenderReceiver.csproj" />
   </ItemGroup>
 
 </Project>
