インターフェースの変更と新機能の追加
`SingleTouchEventArgs` にデバイスの幅と高さを管理するプロパティを追加し、`LongSideOffsetRatio` を実装しました。
`ITouchSenderReactor` を `ITouchReceiverReactor` に変更し、関連するクラスの受信メソッドを更新しました。
新たに `NetworkHelper` にローカルIPv4アドレスを取得するメソッドを追加し、`TouchReceiver` のリストを更新しました。
プロジェクトに `Extensions` フォルダーを追加し、`Program.cs` から不要な参照を削除しました。

--- a/TouchSenderReceiver/TouchSenderReceiver.csproj
+++ b/TouchSenderReceiver/TouchSenderReceiver.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Voltaney.TouchSenderInterpreter" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
