--- a/TouchSenderTablet.GUI/TouchSenderTablet.GUI.csproj
+++ b/TouchSenderTablet.GUI/TouchSenderTablet.GUI.csproj
@@ -22,8 +22,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.1.240916" />
+    <PackageReference Include="InputSimulatorPlus" Version="1.0.7" NoWarn="NU1701" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.3" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.7.250310001" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="3.0.0" />
@@ -31,6 +36,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TouchSenderReceiver\TouchSenderReceiver.csproj" />
     <ProjectReference Include="..\TouchSenderTablet.GUI.Core\TouchSenderTablet.GUI.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
