--- a/TouchSenderTablet.GUI/appsettings.json
+++ b/TouchSenderTablet.GUI/appsettings.json
@@ -1,6 +1,73 @@
 ﻿{
     "LocalSettingsOptions": {
-      "ApplicationDataFolder": "TouchSenderTablet.GUI/ApplicationData",
-      "LocalSettingsFile": "LocalSettings.json"
+        "ApplicationDataFolder": "TouchSenderTablet.GUI/ApplicationData",
+        "LocalSettingsFile": "LocalSettings.json"
+    },
+    "Logging": {
+        "NLog": {
+            "IncludeScopes": false,
+            "ParseMessageTemplates": true,
+            "CaptureMessageProperties": true
+        }
+    },
+    "NLog": {
+        "autoreload": true,
+        "internalLogLevel": "Info",
+        "internalLogFile": "c:/temp/console-example-internal2.log",
+        "throwConfigExceptions": true,
+        "targets": {
+            "file": {
+                "type": "AsyncWrapper",
+                "target": {
+                    "File": {
+                        "type": "File",
+                        "fileName": "${specialfolder:folder=LocalApplicationData:cached=true}/app.log",
+                        "archiveAboveSize":100000,
+                        "maxArchiveFiles":1, 
+                        "layout": {
+                            "type": "JsonLayout",
+                            "Attributes": [
+                                {
+                                    "name": "timestamp",
+                                    "layout": "${date:format=yyyy-MM-ddTHH\\:mm\\:ss.ffffff}"
+                                },
+                                {
+                                    "name": "level",
+                                    "layout": "${level}"
+                                },
+                                {
+                                    "name": "logger",
+                                    "layout": "${logger}"
+                                },
+                                {
+                                    "name": "message",
+                                    "layout": "${message:raw=true}"
+                                },
+                                {
+                                    "name": "properties",
+                                    "encode": false,
+                                    "layout": {
+                                        "type": "JsonLayout",
+                                        "includeallproperties": "true"
+                                    }
+                                },
+                                {
+                                    "name": "exception",
+                                    "encode": false,
+                                    "layout": "${exception:format=@}"
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "rules": [
+            {
+                "logger": "*",
+                "minLevel": "Trace",
+                "writeTo": "File"
+            }
+        ]
     }
 }
