エラーハンドリングとUI改善のための変更
`MainWindow.xaml.cs` でのメソッド名変更とエラーメッセージ処理の改善、`ShowErrorDialogMessage` クラスのプロパティ変更。
`SettingsViewModel.cs` でのエラーダイアログ表示機能の追加。
`ErrorDialogContent.xaml` での新しいバインディングとコンバータの定義。
`MainPage.xaml.cs` でのロギング情報の削除。
`appsettings.json` でのログファイルパスの変更とアーカイブ設定の改善。
`StringToVisibilityConverter.cs` でのUI可視性制御機能の実装。

--- a/TouchSenderTablet.GUI/appsettings.json
+++ b/TouchSenderTablet.GUI/appsettings.json
@@ -13,7 +13,7 @@
     "NLog": {
         "autoreload": true,
         "internalLogLevel": "Info",
-        "internalLogFile": "c:/temp/console-example-internal2.log",
+        "internalLogFile": "${specialfolder:folder=LocalApplicationData:cached=true}/console-example-internal2.log",
         "throwConfigExceptions": true,
         "targets": {
             "file": {
@@ -22,8 +22,9 @@
                     "File": {
                         "type": "File",
                         "fileName": "${specialfolder:folder=LocalApplicationData:cached=true}/app.log",
-                        "archiveAboveSize":100000,
-                        "maxArchiveFiles":1, 
+                        "archiveAboveSize": 100000,
+                        "archiveOldFileOnStartup": true,
+                        "maxArchiveFiles": 1,
                         "layout": {
                             "type": "JsonLayout",
                             "Attributes": [
