ログファイル表示のMSIX/Unpackaged両対応
`LogFileHelper`クラスを追加し、MSIX環境でのログファイル検索を非同期で行う`FindLogFile`メソッドを実装しました。
`NLogHelper`の`FindTargetByName`メソッドで`LogEventInfo`の生成方法を改善し、ターゲットファイルのパス取得処理を最適化しました。
`SettingsViewModel`の`ShowLogFile`メソッドを修正し、ログファイル取得を一元化しました。
`appsettings.json`の設定を更新し、`ApplicationDataFolder`のパス修正や`autoreload`を`false`に設定しました。
NLogの内部ログファイルのパスも適切なディレクトリに変更しました。

--- a/TouchSenderTablet.GUI/appsettings.json
+++ b/TouchSenderTablet.GUI/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
     "LocalSettingsOptions": {
-        "ApplicationDataFolder": "TouchSenderTablet.GUI/ApplicationData",
+        "ApplicationDataFolder": "TouchSenderTablet/ApplicationData",
         "LocalSettingsFile": "LocalSettings.json"
     },
     "Logging": {
@@ -11,9 +11,9 @@
         }
     },
     "NLog": {
-        "autoreload": true,
+        "autoreload": false,
         "internalLogLevel": "Info",
-        "internalLogFile": "${specialfolder:folder=LocalApplicationData:cached=true}/console-example-internal2.log",
+        "internalLogFile": "${userLocalApplicationDataDir}/TouchSenderTablet/nlog_internal.log",
         "throwConfigExceptions": true,
         "targets": {
             "file": {
@@ -21,7 +21,7 @@
                 "target": {
                     "File": {
                         "type": "File",
-                        "fileName": "${specialfolder:folder=LocalApplicationData:cached=true}/app.log",
+                        "fileName": "${specialfolder:folder=LocalApplicationData:cached=true}/TouchSenderTablet/app.log",
                         "archiveAboveSize": 100000,
                         "maxArchiveFiles": 1,
                         "layout": {
