--- a/TouchSenderTablet.GUI/appsettings.json
+++ b/TouchSenderTablet.GUI/appsettings.json
@@ -12,7 +12,7 @@
     },
     "NLog": {
         "autoreload": false,
-        "internalLogLevel": "Info",
+        "internalLogLevel": "Warn",
         "internalLogFile": "${userLocalApplicationDataDir}/TouchSenderTablet/nlog_internal.log",
         "throwConfigExceptions": true,
         "targets": {
