ローカライズ機能の追加とリソースの整理
ResourceExtensions.cs にリソースローダーを追加し、ローカライズされた文字列を取得するメソッドを実装しました。MainWindow.xaml.cs では、ダイアログの閉じるボタンのテキストをローカライズされた文字列に変更しました。

Resources.resw では、"Personalization" を "Appearance" に変更し、新しいエントリを追加しました。また、XML ヘッダーとスキーマを追加してリソースファイルの構造を明確にしました。

TouchSenderTablet.GUI.csproj では、アセンブリ名や著作権情報を追加し、不要なファイルを削除しました。MainViewModel.cs では、IP アドレスとネットワークエラーメッセージの表示をローカライズされた文字列に変更しました。

ErrorDialogContent.xaml では、エラーメッセージの詳細表示用のテキストブロックに UID を追加しました。

--- a/TouchSenderTablet.GUI/TouchSenderTablet.GUI.csproj
+++ b/TouchSenderTablet.GUI/TouchSenderTablet.GUI.csproj
@@ -16,11 +16,11 @@
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
     <LangVersion>preview</LangVersion>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <AssemblyName>TouchSender Tablet</AssemblyName>
+    <Authors>Voltaney</Authors>
+    <Copyright>© Voltaney 2025</Copyright>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
-  <ItemGroup>
-    <None Remove="Styles\CanvasColor.xaml" />
-    <None Remove="Views\ErrorDialogContent.xaml" />
-  </ItemGroup>
 
   <ItemGroup>
     <Manifest Include="$(ApplicationManifest)" />
@@ -49,12 +49,7 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <Page Update="Views\ErrorDialogContent.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Update="Styles\CanvasColor.xaml">
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
+
     <None Update="Assets/*">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
