リリース構成のデバッグ情報を無効化
プロジェクトファイルに`<DebugType>none</DebugType>`を追加し、リリースビルド時にデバッグ情報が生成されないようにしました。対象ファイルは`TouchSenderReceiver.csproj`、`TouchSenderTablet.CUI.csproj`、`TouchSenderTablet.GUI.Core.csproj`、`TouchSenderTablet.GUI.csproj`です。また、`TouchSenderTablet.CUI.csproj`に`ConsoleAppFramework`パッケージの参照を追加しました。

--- a/TouchSenderTablet.CUI/TouchSenderTablet.CUI.csproj
+++ b/TouchSenderTablet.CUI/TouchSenderTablet.CUI.csproj
@@ -7,6 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="ConsoleAppFramework" Version="5.4.1">
       <PrivateAssets>all</PrivateAssets>
