--- a/TouchSenderReceiver/TouchSenderReceiver.csproj
+++ b/TouchSenderReceiver/TouchSenderReceiver.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Voltaney.TouchSenderInterpreter" Version="1.0.1" />
   </ItemGroup>
